--- a/quickstart/eas-setup.mdx
+++ b/quickstart/eas-setup.mdx
@@ -9,7 +9,7 @@ description: "Set up Expo Application Services (EAS) for building your app"
 
 ### Step 1: Install EAS CLI
 
-Install the EAS CLI globally on your development machine:
+Copy and paste this command into your terminal and press Enter to install the EAS CLI globally on your development machine:
 
 ```bash
 npm install -g eas-cli
@@ -19,7 +19,7 @@ npm install -g eas-cli
 
 You'll need an Expo account to use EAS. If you don't have one, sign up at [expo.dev](https://expo.dev/signup).
 
-Log in through the CLI:
+Copy and paste this command into your terminal and press Enter to log in:
 
 ```bash
 eas login
@@ -27,7 +27,7 @@ eas login
 
 ### Step 3: Configure Build Profiles
 
-Run the build configuration command:
+Copy and paste this command into your terminal and press Enter to create your build configuration:
 
 ```bash
 eas build:configure
