--- a/quickstart/supabase-setup.mdx
+++ b/quickstart/supabase-setup.mdx
@@ -13,7 +13,7 @@ The BuildWithAI boilerplate uses [Supabase](https://supabase.com/) for authentic
 
 ### Create Supabase Project
 
-1. **Go to your Supabase dashboard** at [supabase.com](https://database.new)
+1. **Create a new project on Supabase** [here](https://supabase.com)
    - Sign up for an account if you don't have one
    - Log in to your account
 
@@ -49,10 +49,10 @@ Set up the authentication URLs for your development build:
    - **Site URL**: Your app scheme from `app.json` + `://` (e.g., `travelapp://`)
    - **Redirect URLs**: Your app scheme + `://**` (e.g., `travelapp://**`)
 
-<Warning>
+<Info>
   If you want to quickly test the app with Expo Go before moving to development builds:
   1. Go to **Authentication** → **Sign In / Providers** → **Email**
   2. Toggle off **Confirm email** under the Email provider settings
   
-  **Important**: Remember to re-enable this setting before deploying to production for proper security.
-</Warning>
+  **Important**: Remember to re-enable this setting before you deploy to production for proper security.
+</Info>
