windsurf terminal guide

--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -28,9 +28,13 @@ Before you begin, make sure you have the following:
 
 ### Step 2: Get the Boilerplate code
 
-1. Open the terminal in Windsurf by pressing:
-   - Windows: `Ctrl+Shift+\`` (backtick)
-   - macOS: `Cmd+Shift+\` (backtick)
+1. Open the terminal in Windsurf either by:
+   - Using keyboard shortcut:
+     - Windows: **Ctrl+Shift+`** (backtick)
+     - macOS: **Cmd+Shift+`** (backtick)
+   - Or using menu:
+     - Click **Terminal** in the top menu bar
+     - Select **New Terminal**
 
 2. Copy this command, paste it in the terminal, and press Enter:
 
